unpackaged/main/default/objects/PolicyId_Legal_Entity__c/PolicyId_Legal_Entity__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Liste des différentes entités légale et la policy rattachée</description>
    <label>PolicyId By Legal Entity</label>
</CustomObject>