unpackaged/main/default/objects/PolicyId_Legal_Entity__c/fields/Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Code__c</fullName>
    <label>Business Unit Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>