unpackaged/main/default/objects/PolicyId_Legal_Entity__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>