unpackaged/main/default/objects/PolicyId_Legal_Entity__c/fields/policyId__c.field-meta.xml
<CustomField>
    <fullName>policyId__c</fullName>
    <description>Policy Allianz</description>
    <label>policyId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>